# rosbag_play

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: locobot.lua  locobot_localization.lua
launch/: bag_processor_launch.py  carto_slam.launch  mapping_bag.launch  play_undistortion_slam.launch  replay_localization.launch
maps/719locobot/: map.pbstream  map.pgm  map.yaml
maps/newmap/: map.pbstream  map.pgm  map.yaml
maps/spinmap/: map.pbstream  map.pgm  map.yaml
rosbag/: newbag.bag:Zone.Identifier
scripts/: bagplay_example.py  getdata.py  getdata.sh  getdata_backup.py  read_pose.py  tf_listener.py  write_map.sh
src/: playback_node.cpp
