<?xml version="1.0"?>
<package format="3">
  <name>my_rosbag_playback</name>
  <version>0.0.1</version>
  <description>Example package for ROS2 bag playback</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosbag2_cpp</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
